--- a/Project/app/src/main/AndroidManifest.xml
+++ b/Project/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
             </intent-filter>
         </activity>
 
+        <receiver android:name=".WorkManagers.ReminderReceiver"/>
 
     </application>
 
