--- a/Project/app/build.gradle
+++ b/Project/app/build.gradle
@@ -78,4 +78,6 @@ dependencies {
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+
+    implementation "androidx.work:work-runtime-ktx:2.5.0"
 }
