--- a/Project/app/build.gradle
+++ b/Project/app/build.gradle
@@ -84,6 +84,9 @@ dependencies {
     implementation "androidx.work:work-runtime-ktx:2.5.0"
 
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    implementation 'com.google.android.gms:play-services-location:17.0.0'
+    implementation 'com.google.maps.android:android-maps-utils:0.6.2'
+
 
 
 
